--- a/style.css
+++ b/style.css
@@ -12,3 +12,11 @@ div {
     width: 230px;
     height: auto;
 }
+
+h2 {
+    text-align: center;
+    text-decoration: double;
+    background-color: black;
+    color: white;
+}
+
