adds the switch in images at an interval of 2 seconds

--- a/style.css
+++ b/style.css
@@ -20,3 +20,10 @@ h2 {
     color: white;
 }
 
+#im2 {
+    display: block;
+    width: 300px;
+    height: auto;
+    margin: 0 auto;
+    padding-top: 10px;
+}
